--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "ejs": "^2.6.1",
     "express": "^4.17.1",
     "express-rate-limiter": "^1.3.1",
@@ -18,6 +19,7 @@
     "helmet": "^4.2.0",
     "mongoose": "^5.11.8",
     "morgan": "^1.10.0",
+    "nanoid": "^3.1.20",
     "socket.io": "^2.2.0",
     "uniqid": "^5.2.0"
   }
