--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "dotenv": "^8.2.0",
     "ejs": "^2.6.1",
     "express": "^4.17.1",
-    "express-rate-limiter": "^1.3.1",
+    "express-rate-limit": "^5.2.3",
     "express-slow-down": "^1.4.0",
     "helmet": "^4.2.0",
+    "md5": "^2.3.0",
     "mongoose": "^5.11.8",
     "morgan": "^1.10.0",
     "nanoid": "^3.1.20",
