--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-rate-limit": "^5.2.3",
     "express-slow-down": "^1.4.0",
     "helmet": "^4.2.0",
+    "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0",
     "mongoose": "^5.11.8",
     "morgan": "^1.10.0",
